--- a/index.html
+++ b/index.html
@@ -192,8 +192,25 @@
           </main>
         </div>
       </div>
+    
 
-      
+    <script id="template-article-link" type="text/x-handlebars-template">
+      <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+    </script>
+    <scrip id="template-tag-link" type="text/x-handlebars-template">
+      <li><a href="#tag-{{ id }}">{{ title }}</a></li>
+    </script>
+    <scrip id="template-author-link" type="text/x-handlebars-template">
+      <p>by <a href="#author-{{ id }}">{{ title }}</a></p>
+    </scrip>
+    <scrip id="template-tag-cloud-link" type="text/x-handlebars-template">
+      {{#each tags}}
+      <a class="{{ className }}" href="#tag-{{ tag }}"><li>{{ tag }}</li></a>
+      {{/each}}
+    </scrip>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
