--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
     <script id="template-article-link" type="text/x-handlebars-template">
       <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
     </script>
-    <scrip id="template-tag-link" type="text/x-handlebars-template">
+    <script id="template-tag-link" type="text/x-handlebars-template">
       <li><a href="#tag-{{ id }}">{{ title }}</a></li>
     </script>
-    <scrip id="template-author-link" type="text/x-handlebars-template">
+    <script id="template-author-link" type="text/x-handlebars-template">
       <p>by <a href="#author-{{ id }}">{{ title }}</a></p>
-    </scrip>
-    <scrip id="template-tag-cloud-link" type="text/x-handlebars-template">
+    </script>
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
       {{#each tags}}
       <a class="{{ className }}" href="#tag-{{ tag }}"><li>{{ tag }}</li></a>
       {{/each}}
-    </scrip>
+    </script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
